# magisterka

./: .gitignore  README.md
em_alg/: em_alg.py  em_compare.py  em_discrete.py  em_discrete_perform.py  em_qap_plot.py  em_qap_test.py  em_qap_test_all.py  em_visualisation.py  himmelbalu_test.py  main.py  main2.py  test_all_discrete.py  test_functions.py  visualisation.py
em_alg/benchmark_functions/: ackley.py  factory.py  himmelblau.py  test_function.py
em_alg/em/: em.py  em_solver.py
em_alg/em_discrete/: em_discrete.py  hamming.py  pmx.py  pmx_tests.py  repulsion.py  repulsion_tests.py
em_alg/qap/: input_file_reader.py  solution_file_reader.py
em_alg_cpp/src/: HammingDistance.h  InputFileReader.cpp  InputFileReader.h  PMX.cpp  QAP.cpp  QAPInterface.h  RangeGenerator.cpp  RangeGenerator.h
em_alg_cpp_cuda/: CMakeLists.txt
em_alg_cpp_cuda/src/: InputFileReader.cpp  PermutationFactory.cpp  QAP.h  SolutionFileReader.cpp  gpu.cu  gpu.hpp  main.cpp  run.cpp  run.h  run_tests.cpp
em_alg_cpp_cuda/src/cpu/: AlgorithmInput.h  CUDAUtils.cpp  CUDAUtils.h  InputFileReader.h  ProgramArgumentsParser.cpp  ProgramArgumentsParser.h  QAPDataTypes.h  SolutionFileReader.h
em_alg_cpp_cuda/src/gpu/: EMAlgorithm.cu  EMAlgorithm.h  GPU.cu  GPU.hpp  Hamming.h  PMX.h  QAP_GPU.h  Repulsion.h  gpu.cu  gpu.hpp
em_alg_cpp_cuda/tests/: hamming_cuda_test.cu  malloc_cuda_test.cu  memcpy_cuda_test.cu  pmx_cuda_test.cu  random_cuda_test.cu
em_alg_numba/: common.py  device_info.py  em_qap_gpu.py  em_qap_gpu_plot.py  main.py  test_all.py  tests.py
em_alg_numba/qap/: input_file_reader.py  qap.py
em_alg_numba/tests/: charges_test.py  forces_test.py  local_search_test.py  qap_test.py  test_points.py
em_discrete_numba/: arguments.py  device_info.py  execute.py  main.py  plot.py  pmx_cuda_test.py  random_cuda_test.py  test_all.py
em_discrete_numba/em_discrete/: em_discrete.py  em_discrete_cuda.py  hamming_cuda.py  pmx_cuda.py  repulsion_cuda.py
em_discrete_numba/qap/: qap.py
other/ploting/: blocks1.py  blocks2.py  eks1.py  iter1.py  iter2.py  main.py  main2.py  neigh.py  neigh2.py  perm1.py  perm2.py
other/simple_qap/: main.py
qap_cpu/: CMakeLists.txt  InputFileReader.cpp  InputFileReader.h  QAP.h  main.cpp
qap_cpu/src/: EMAlgorithm.cpp  EMAlgorithm.h  HammingDistance.cpp  PMX.cpp  PMX.h  PermutationFactory.h  ProgramArgumentsParser.cpp  ProgramArgumentsParser.h  QAP.h  SolutionFileReader.cpp  SolutionFileReader.h  main.cpp
qap_cpu/unit_tests/: HammingDistanceTests.cpp  PMXTests.cpp
results/: qap_cpu_1.txt  qap_cpu_python.txt
scripts/: run_tests.py
test_instances/Lipa/: lipa20a.out
